--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ social-network-links:
   email: "someone@example.com"
 #  facebook: deanattali
 #  github: daattali
-twitter: https://x.com/Nang__Rang
+  twitter: "https://x.com/Nang__Rang"
 #  patreon: DeanAttali
 #  youtube: c/daattali
 #  medium: yourname
