--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social-network-links:
 #  facebook: deanattali
 #  github: daattali
   twitter: Nang__Rang
-  bluesky: /nangrrang
+  bluesky: nangrrang
 #  patreon: DeanAttali
 #  youtube: c/daattali
 #  medium: yourname
