--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ round-avatar: true
 # 사용하지 않으려면 코드 맨 앞쪽에 '#' 을 붙이고 띄어쓰기 해주세요.
 # 사용하려면 반대로 # 을 지워주세요.
 social-network-links:
-  email: "someone@example.com"
+#  email: "someone@example.com"
 #  facebook: deanattali
 #  github: daattali
   twitter: Nang__Rang
-  bluesky: nangrrang
+  bluesky: nangrrang.bsky.social
 #  patreon: DeanAttali
 #  youtube: c/daattali
 #  medium: yourname
