--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social-network-links:
 #  facebook: deanattali
 #  github: daattali
   twitter: Nang__Rang
-  bluesky: nangrrang.bsky.social
+#  bluesky: nangrrang.bsky.social
 #  patreon: DeanAttali
 #  youtube: c/daattali
 #  medium: yourname
