--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,6 @@ social-network-links:
 #  facebook: deanattali
 #  github: daattali
   twitter: Nang__Rang
-#  bluesky: nangrrang.bsky.social
 #  patreon: DeanAttali
 #  youtube: c/daattali
 #  medium: yourname
@@ -77,7 +76,7 @@ share-links-active:
 
 # 웹사이트 링크를 사이트 하단에 어떻게 표시할지 설정합니다.
 # 필요 없다면 아래 문장을 한 줄 지워주세요.
-url-pretty: "Yourname.com"
+url-pretty: "NangRang.com"
 
 # --------- 이 아래로는 관련 지식이 없다면 절대 변경하지 마세요. -----------
 
