--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,12 @@
 # main links
 main:
-  - title: "Home"
-    url: /
-  - title: "Tag"
-    url: /tags/
-  - title: "Search"
-    url: /search/
-
-docs: 
-  - title: "그림"
-    url: /그림/
-    category_name: "그림"
+  - title: 그림
+    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+   - title: 서양판타지
+     url: https://mmistakes.github.io/minimal-mistakes/about/
+  # - title: "Sample Posts"
+  #   url: /year-archive/
+  # - title: "Sample Collections"
+  #   url: /collection-archive/
+  # - title: "Sitemap"
+  #   url: /sitemap/
