--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author: 낭랑
 navbar-links:
   About: "aboutme" # 이렇게 마크다운 문서를 보여줄 수도 있고 (이 때 .md는 뺀 제목만 씁니다)
   카테고리: 
-    - 그림: "그림.md" # 이렇게 드롭다운 메뉴를 만들 수도 있습니다.
+    - 그림: "category/그림.md" # 이렇게 드롭다운 메뉴를 만들 수도 있습니다.
     - 서양판타지: "서양판타지.md"
      
 
